
	* www/soap/SoapAPI.php:
	Added a few new methods - getNumberOfProjects, getNumberOfUsers

	* contrib/soapclients/java:
	Added an initial Java SOAP client implementation

	* common/include/GForge.class:
	A new class with some utility methods to get the number of users
	and projects hosted by a GForge server.

	* www/include/features_boxes.php:
	Refactoring some SQL into the new GForge.class.

2003-05-02  Reinhard Spisser <reinhard@spisser.it>

	* www/pm/include/ProjectTaskHTML.class,
	common/pm/ProjectTask.class:
	bug 319: warning in task manager

	* www/include/languages/Italian.tab:
	translations

2003-05-01 Tom Copeland <tom@infoether.com>
	
	* www/mail/admin/index.php: 
	Bug 323: Link to "administrate this list" was hardcoded HTTPS

	* www/admin/grouplist.php: 
	RFE #179: Groups & users list sortable

	* www/snippet/add_snippet_to_package.php: 
	RFE #305: Adding code snippet to code snippet package

2003-04-28  Reinhard Spisser	<reinhard@spisser.it>

	* common/include/utils.php:
	bug 52: Path to sendmail is hardcoded

	* www/top/index.php:
	bug 70: commented links to not-working stats pages

	* www/include/languages/German.tab: 
	fixed bug #303: Statistikien->Statistiken

	* www/include/languages/Italian.tab:
	some translations, fixes, removed double strings

2003-04-28 Tom Copeland <tom@infoether.com>

	* www/include/project_home.php: Bug #320: Developer count 
	needs to check user.status.

2003-04-25 Tom Copeland <tom@infoether.com>

	* contrib/cmd-line-prototype.tar.gz: Patch #160 - Richard's 
	command line API prototype.

2003-04-24 Tom Copeland <tom@infoether.com>

	* www/survey/admin show_results_aggregate.php: Fixed bug 315: survey a
	results were not displayed correctly in PG 7.2
	* common/tracker/Artifact.class: Fixed bug 311: double-submitting code 
	was catching similar items that were in different projects

2003-04-20  Roland Mas  <lolando@debian.org>

	* common/include/Group.class: Send new project registration,